--- a/home.html
+++ b/home.html
@@ -360,7 +360,16 @@
         Get your favorites for free
       </div>
 
-      <div class="flex flex-row justify-center space-x-16 text-2xl font-medium">
+      <div
+        class="
+          flex flex-row
+          justify-center
+          space-x-6
+          md:space-x-16
+          text-2xl
+          font-medium
+        "
+      >
         <div class="border-b-4 border-green-900 text-center w-20">
           25 <span class="text-yellow-600 text-base">&#9733;</span>
         </div>
@@ -789,44 +798,45 @@
       <div class="text-xl font-semibold">About Us</div>
       <div class="hover:bg-background hover:rounded-xl">
         <img
-            class="inline"
-            src="https://img.icons8.com/android/24/000000/expand-arrow.png"
-          />
+          class="inline"
+          src="https://img.icons8.com/android/24/000000/expand-arrow.png"
+        />
       </div>
     </div>
     <div class="mb-10 mx-10 flex flex-row items-end justify-between lg:hidden">
       <div class="text-xl font-semibold">Careers</div>
       <div class="hover:bg-background hover:rounded-xl">
         <img
-            class="inline"
-            src="https://img.icons8.com/android/24/000000/expand-arrow.png"
-          />
+          class="inline"
+          src="https://img.icons8.com/android/24/000000/expand-arrow.png"
+        />
       </div>
     </div>
     <div class="mb-10 mx-10 flex flex-row items-end justify-between lg:hidden">
       <div class="text-xl font-semibold">Social Impact</div>
       <div class="hover:bg-background hover:rounded-xl">
         <img
-            class="inline"
-            src="https://img.icons8.com/android/24/000000/expand-arrow.png"
-          />      </div>
+          class="inline"
+          src="https://img.icons8.com/android/24/000000/expand-arrow.png"
+        />
+      </div>
     </div>
     <div class="mb-10 mx-10 flex flex-row items-end justify-between lg:hidden">
       <div class="text-xl font-semibold">For Business Partners</div>
       <div class="hover:bg-background hover:rounded-xl">
         <img
-            class="inline"
-            src="https://img.icons8.com/android/24/000000/expand-arrow.png"
-          />
+          class="inline"
+          src="https://img.icons8.com/android/24/000000/expand-arrow.png"
+        />
       </div>
     </div>
     <div class="mb-10 mx-10 flex flex-row items-end justify-between lg:hidden">
       <div class="text-xl font-semibold">Order and Pickup</div>
       <div class="hover:bg-background hover:rounded-xl">
         <img
-            class="inline"
-            src="https://img.icons8.com/android/24/000000/expand-arrow.png"
-          />
+          class="inline"
+          src="https://img.icons8.com/android/24/000000/expand-arrow.png"
+        />
       </div>
     </div>
     <div class="hidden md:flex flex-row justify-start ml-10">
